[gd_scene load_steps=29 format=2]

[ext_resource path="res://resources/def_mode_0.tres" type="ButtonGroup" id=1]
[ext_resource path="res://resources/die_mode_0.tres" type="ButtonGroup" id=2]
[ext_resource path="res://resources/die_mode_1.tres" type="ButtonGroup" id=3]
[ext_resource path="res://resources/def_mode_1.tres" type="ButtonGroup" id=4]
[ext_resource path="res://fonts/CrimsonText-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://images/d20.png" type="Texture" id=6]
[ext_resource path="res://images/life_progress.png" type="Texture" id=7]
[ext_resource path="res://images/int.png" type="Texture" id=8]
[ext_resource path="res://images/blank.png" type="Texture" id=9]
[ext_resource path="res://images/spr.png" type="Texture" id=10]
[ext_resource path="res://images/edit.png" type="Texture" id=11]
[ext_resource path="res://images/download.png" type="Texture" id=12]
[ext_resource path="res://images/life_over.png" type="Texture" id=13]
[ext_resource path="res://images/ki_progress.png" type="Texture" id=14]
[ext_resource path="res://images/saiyansuit.png" type="Texture" id=15]
[ext_resource path="res://images/DEX.png" type="Texture" id=16]
[ext_resource path="res://images/scouter.png" type="Texture" id=17]
[ext_resource path="res://images/life_bottom.png" type="Texture" id=18]
[ext_resource path="res://scenes/top_panel.tscn" type="PackedScene" id=19]
[ext_resource path="res://scripts/battle_sim.gd" type="Script" id=20]
[ext_resource path="res://images/st_bottom.png" type="Texture" id=21]
[ext_resource path="res://images/st_progress.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[node name="main" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 20 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="life_under_1" type="Sprite" parent="."]
position = Vector2( 213, 40 )
scale = Vector2( 1.04, 0.8 )
texture = ExtResource( 13 )

[node name="st_under_0" type="Sprite" parent="."]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 213.5, 114 )
scale = Vector2( 1.0375, 1.43495 )
texture = ExtResource( 21 )

[node name="st_under_1" type="Sprite" parent="."]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 809.359, 114 )
scale = Vector2( 1.0382, 1.4352 )
texture = ExtResource( 21 )

[node name="ki_under_1" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 213.5, 77 )
scale = Vector2( 1.0375, 1.52 )
texture = ExtResource( 18 )

[node name="life_bar_0" type="TextureProgress" parent="."]
margin_left = 13.0
margin_top = 24.0
margin_right = 413.0
margin_bottom = 74.0
step = 0.0
value = 100.0
texture_under = ExtResource( 18 )
texture_progress = ExtResource( 7 )

[node name="life_under_2" type="Sprite" parent="."]
position = Vector2( 809, 40 )
scale = Vector2( 1.04, 0.8 )
texture = ExtResource( 13 )

[node name="life_bar_1" type="TextureProgress" parent="."]
margin_left = 612.0
margin_top = 24.0
margin_right = 1012.0
margin_bottom = 74.0
step = 0.0
value = 100.0
texture_under = ExtResource( 18 )
texture_progress = ExtResource( 7 )

[node name="st_bar_0" type="TextureProgress" parent="."]
margin_left = 11.0
margin_top = 98.0
margin_right = 411.0
margin_bottom = 123.0
value = 100.0
texture_progress = ExtResource( 22 )
tint_over = Color( 0.164706, 0.164706, 0.164706, 1 )
tint_progress = Color( 0.705882, 0.721569, 0.454902, 1 )

[node name="st_bar_1" type="TextureProgress" parent="."]
margin_left = 609.0
margin_top = 98.0
margin_right = 1009.0
margin_bottom = 123.0
value = 100.0
texture_progress = ExtResource( 22 )
tint_over = Color( 0.164706, 0.164706, 0.164706, 1 )
tint_progress = Color( 0.705882, 0.721569, 0.454902, 1 )

[node name="ki_bar_0" type="TextureProgress" parent="."]
margin_left = 12.0
margin_top = 63.0
margin_right = 362.0
margin_bottom = 103.0
value = 100.0
texture_progress = ExtResource( 14 )
tint_over = Color( 0.164706, 0.164706, 0.164706, 1 )
tint_progress = Color( 0, 0.223529, 0.709804, 1 )

[node name="ki_0" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 56.0
margin_right = 409.0
margin_bottom = 97.0
custom_fonts/normal_font = SubResource( 4 )
text = "ki:?/?"

[node name="ki_under_2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 809, 78 )
scale = Vector2( 1.04, 1.44 )
texture = ExtResource( 18 )

[node name="st_0" type="RichTextLabel" parent="."]
margin_left = 9.0
margin_top = 91.0
margin_right = 425.0
margin_bottom = 132.0
custom_fonts/normal_font = SubResource( 4 )
text = "st:?/?"

[node name="st_1" type="RichTextLabel" parent="."]
margin_left = 606.0
margin_top = 89.0
margin_right = 1017.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( -929, 199 )
custom_fonts/normal_font = SubResource( 4 )
text = "st:?/?"

[node name="ki_bar_1" type="TextureProgress" parent="."]
margin_left = 612.0
margin_top = 65.0
margin_right = 1013.0
margin_bottom = 105.0
value = 100.0
texture_progress = ExtResource( 14 )
tint_over = Color( 0.164706, 0.164706, 0.164706, 1 )
tint_progress = Color( 0, 0.223529, 0.709804, 1 )

[node name="ki_1" type="RichTextLabel" parent="."]
margin_left = 603.0
margin_top = 53.0
margin_right = 1026.0
margin_bottom = 97.0
custom_fonts/normal_font = SubResource( 4 )
text = "ki:?/?"

[node name="confirm_1" type="Button" parent="."]
margin_left = 16.0
margin_top = 168.0
margin_right = 280.0
margin_bottom = 188.0
text = "ESCOLHER FICHA 1"

[node name="ficha_box_0" type="OptionButton" parent="."]
margin_left = 16.0
margin_top = 144.0
margin_right = 280.0
margin_bottom = 164.0

[node name="ficha_box_1" type="OptionButton" parent="."]
margin_left = 744.0
margin_top = 136.0
margin_right = 1008.0
margin_bottom = 156.0

[node name="life_0" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 16.0
margin_right = 420.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( -512, 40 )
custom_fonts/normal_font = SubResource( 2 )
text = "hp:?/?"

[node name="life_1" type="RichTextLabel" parent="."]
margin_left = 601.0
margin_top = 16.0
margin_right = 1016.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( -512, 40 )
custom_fonts/normal_font = SubResource( 2 )
text = "hp:?/?"

[node name="confirm_2" type="Button" parent="."]
margin_left = 744.0
margin_top = 164.0
margin_right = 1008.0
margin_bottom = 184.0
text = "ESCOLHER FICHA 2"

[node name="main_panel" type="Panel" parent="."]
margin_left = 297.0
margin_top = 136.0
margin_right = 729.0
margin_bottom = 584.0

[node name="Panel" type="Panel" parent="main_panel"]
modulate = Color( 0.298039, 0.298039, 0.298039, 1 )
margin_left = 32.0
margin_top = 283.0
margin_right = 400.0
margin_bottom = 439.0

[node name="D20" type="Sprite" parent="main_panel"]
position = Vector2( -504, 99 )
scale = Vector2( 0.19611, 0.196667 )
texture = ExtResource( 6 )
offset = Vector2( 2817.39, 122.034 )

[node name="D21" type="Sprite" parent="main_panel"]
position = Vector2( 376, 120 )
scale = Vector2( 0.178889, 0.196667 )
texture = ExtResource( 6 )

[node name="roll_0" type="RichTextLabel" parent="main_panel"]
margin_left = 8.0
margin_top = 152.0
margin_right = 187.0
margin_bottom = 240.0

[node name="roll_1" type="RichTextLabel" parent="main_panel"]
margin_left = 248.0
margin_top = 152.0
margin_right = 424.0
margin_bottom = 242.0

[node name="result" type="RichTextLabel" parent="main_panel"]
margin_left = 48.0
margin_top = 295.0
margin_right = 384.0
margin_bottom = 439.0

[node name="formula" type="Label" parent="main_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = 32.0
margin_right = 120.0
margin_bottom = 56.0
align = 1
valign = 1

[node name="bloqueio_text" type="Label" parent="main_panel"]
margin_right = 40.0
margin_bottom = 14.0

[node name="panel_1" type="Panel" parent="."]
margin_left = 16.0
margin_top = 200.0
margin_right = 272.0
margin_bottom = 584.0

[node name="skill_box_0" type="OptionButton" parent="panel_1"]
margin_left = 8.0
margin_top = 272.0
margin_right = 112.0
margin_bottom = 292.0
clip_text = true

[node name="transformation_box_0" type="OptionButton" parent="panel_1"]
margin_left = 9.0
margin_top = 296.0
margin_right = 113.0
margin_bottom = 316.0
clip_text = true

[node name="icon_anchor" type="Sprite" parent="panel_1"]
position = Vector2( -12, -160 )
__meta__ = {
"_edit_group_": true
}

[node name="power_level_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 376.0
margin_right = 264.0
margin_bottom = 408.0
custom_fonts/normal_font = SubResource( 3 )
text = "PDL:?"

[node name="Blank" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 35.5, 271.5 )
scale = Vector2( 0.5, 0.66 )
texture = ExtResource( 9 )

[node name="for_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 224.0
custom_fonts/normal_font = SubResource( 1 )
text = "FOR:?"

[node name="des_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 224.0
margin_right = 264.0
margin_bottom = 256.0
custom_fonts/normal_font = SubResource( 1 )
text = "DES:?"

[node name="res_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 264.0
margin_right = 264.0
margin_bottom = 296.0
custom_fonts/normal_font = SubResource( 1 )
text = "RES:?"

[node name="int_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 304.0
margin_right = 264.0
margin_bottom = 336.0
custom_fonts/normal_font = SubResource( 1 )
text = "INT:?"

[node name="esp_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 344.0
margin_right = 264.0
margin_bottom = 384.0
custom_fonts/normal_font = SubResource( 1 )
text = "ESP:?"

[node name="for_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 35.9375, 191.938 )
scale = Vector2( 0.107222, 0.142778 )
texture = ExtResource( 12 )

[node name="des_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 232 )
scale = Vector2( 0.0795082, 0.193939 )
texture = ExtResource( 16 )

[node name="res_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 272 )
scale = Vector2( 0.015, 0.02 )
texture = ExtResource( 15 )

[node name="int_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 312 )
scale = Vector2( 0.107778, 0.142222 )
texture = ExtResource( 8 )

[node name="Scouter" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 392 )
scale = Vector2( 0.027907, 0.0471567 )
texture = ExtResource( 17 )

[node name="spr_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 352 )
scale = Vector2( 0.106667, 0.142222 )
texture = ExtResource( 10 )

[node name="for_edit" type="TextureButton" parent="panel_1/icon_anchor"]
visible = false
margin_left = -4.0
margin_top = 178.0
margin_right = 21.0
margin_bottom = 203.0
texture_normal = ExtResource( 11 )

[node name="des_edit" type="TextureButton" parent="panel_1/icon_anchor"]
visible = false
margin_left = -4.0
margin_top = 220.0
margin_right = 21.0
margin_bottom = 245.0
texture_normal = ExtResource( 11 )

[node name="atacar_0" type="Button" parent="panel_1"]
visible = false
margin_left = 361.0
margin_top = 37.0
margin_right = 465.0
margin_bottom = 62.0
text = "ATACAR"

[node name="nome_0" type="RichTextLabel" parent="panel_1"]
margin_left = 64.0
margin_right = 320.0
margin_bottom = 248.0
custom_fonts/normal_font = SubResource( 5 )

[node name="desvio_0" type="CheckBox" parent="panel_1"]
margin_top = 336.0
margin_right = 128.0
margin_bottom = 360.0
pressed = true
group = ExtResource( 1 )
text = "Desviar"

[node name="bloqueio_0" type="CheckBox" parent="panel_1"]
margin_top = 360.0
margin_right = 128.0
margin_bottom = 384.0
group = ExtResource( 1 )
text = "Bloquear"

[node name="desvantagem_0" type="CheckBox" parent="panel_1"]
margin_left = 143.0
margin_top = 364.0
margin_right = 258.0
margin_bottom = 388.0
group = ExtResource( 2 )
text = "Desvantagem"

[node name="vantagem_0" type="CheckBox" parent="panel_1"]
margin_left = 143.0
margin_top = 339.0
margin_right = 255.0
margin_bottom = 363.0
group = ExtResource( 2 )
text = "Vantagem"

[node name="neutro_0" type="CheckBox" parent="panel_1"]
margin_left = 143.0
margin_top = 315.0
margin_right = 255.0
margin_bottom = 339.0
rect_pivot_offset = Vector2( -256, -32 )
pressed = true
group = ExtResource( 2 )
text = "Neutro"

[node name="t_modifier" type="Label" parent="panel_1"]
margin_left = 121.0
margin_top = 296.0
margin_right = 224.0
margin_bottom = 315.0

[node name="panel_2" type="Panel" parent="."]
margin_left = 752.0
margin_top = 200.0
margin_right = 1008.0
margin_bottom = 584.0
rect_pivot_offset = Vector2( -775, 24 )

[node name="skill_box_1" type="OptionButton" parent="panel_2"]
margin_left = 8.0
margin_top = 268.0
margin_right = 112.0
margin_bottom = 288.0
clip_text = true

[node name="transformation_box_1" type="OptionButton" parent="panel_2"]
margin_left = 8.0
margin_top = 296.0
margin_right = 110.0
margin_bottom = 316.0
clip_text = true

[node name="icon_anchor" type="Sprite" parent="panel_2"]
position = Vector2( -8, -165 )
__meta__ = {
"_edit_group_": true
}

[node name="power_level_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 376.0
margin_right = 272.0
margin_bottom = 408.0
custom_fonts/normal_font = SubResource( 3 )
text = "PDL:?"

[node name="Blank" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 35.5, 271.5 )
scale = Vector2( 0.5, 0.66 )
texture = ExtResource( 9 )

[node name="for_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 192.0
margin_right = 272.0
margin_bottom = 224.0
custom_fonts/normal_font = SubResource( 1 )
text = "FOR:?"

[node name="des_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 224.0
margin_right = 272.0
margin_bottom = 256.0
custom_fonts/normal_font = SubResource( 1 )
text = "DES:?"

[node name="res_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 264.0
margin_right = 272.0
margin_bottom = 296.0
custom_fonts/normal_font = SubResource( 1 )
text = "RES:?"

[node name="int_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 304.0
margin_right = 272.0
margin_bottom = 336.0
custom_fonts/normal_font = SubResource( 1 )
text = "INT:?"

[node name="esp_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 344.0
margin_right = 272.0
margin_bottom = 384.0
custom_fonts/normal_font = SubResource( 1 )
text = "ESP:?"

[node name="for_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 35.9375, 191.938 )
scale = Vector2( 0.107222, 0.142778 )
texture = ExtResource( 12 )

[node name="des_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 232 )
scale = Vector2( 0.0795082, 0.193939 )
texture = ExtResource( 16 )

[node name="res_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 272 )
scale = Vector2( 0.015, 0.02 )
texture = ExtResource( 15 )

[node name="int_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 312 )
scale = Vector2( 0.107778, 0.142222 )
texture = ExtResource( 8 )

[node name="Scouter" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 392 )
scale = Vector2( 0.027907, 0.0471567 )
texture = ExtResource( 17 )

[node name="spr_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 352 )
scale = Vector2( 0.106667, 0.142222 )
texture = ExtResource( 10 )

[node name="atacar_1" type="Button" parent="panel_2"]
visible = false
margin_left = -215.0
margin_top = 34.0
margin_right = -111.0
margin_bottom = 59.0
text = "ATACAR"

[node name="nome_1" type="RichTextLabel" parent="panel_2"]
margin_right = 256.0
margin_bottom = 248.0
custom_fonts/normal_font = SubResource( 6 )
text = "
"

[node name="desvio_1" type="CheckBox" parent="panel_2"]
margin_top = 336.0
margin_right = 128.0
margin_bottom = 360.0
pressed = true
group = ExtResource( 4 )
text = "Desviar"

[node name="bloqueio_1" type="CheckBox" parent="panel_2"]
margin_top = 360.0
margin_right = 128.0
margin_bottom = 384.0
group = ExtResource( 4 )
text = "Bloquear"

[node name="desvantagem_1" type="CheckBox" parent="panel_2"]
margin_left = 143.0
margin_top = 365.0
margin_right = 258.0
margin_bottom = 389.0
group = ExtResource( 3 )
text = "Desvantagem"

[node name="vantagem_1" type="CheckBox" parent="panel_2"]
margin_left = 143.0
margin_top = 341.0
margin_right = 255.0
margin_bottom = 365.0
group = ExtResource( 3 )
text = "Vantagem"

[node name="neutro_1" type="CheckBox" parent="panel_2"]
margin_left = 143.0
margin_top = 317.0
margin_right = 255.0
margin_bottom = 341.0
rect_pivot_offset = Vector2( -256, -32 )
pressed = true
group = ExtResource( 3 )
text = "Neutro"

[node name="t_modifier" type="Label" parent="panel_2"]
margin_left = 121.0
margin_top = 296.0
margin_right = 224.0
margin_bottom = 315.0

[node name="reset_0" type="Button" parent="."]
visible = false
margin_left = 304.0
margin_top = 144.0
margin_right = 416.0
margin_bottom = 168.0
text = "RESET HP,KI,ST"

[node name="reset_1" type="Button" parent="."]
visible = false
margin_left = 608.0
margin_top = 144.0
margin_right = 720.0
margin_bottom = 168.0
text = "RESET HP,KI,ST"

[node name="scan_folder" type="Button" parent="."]
visible = false
margin_left = 449.0
margin_top = 144.0
margin_right = 583.0
margin_bottom = 168.0
text = "ATUALIZAR FICHAS"

[node name="life_change_0" type="TextureButton" parent="."]
visible = false
margin_left = 5.0
margin_top = 22.0
margin_right = 421.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( -224, 168 )

[node name="life_change_1" type="TextureButton" parent="."]
visible = false
margin_left = 601.0
margin_top = 20.0
margin_right = 1017.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( -224, 168 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 432.0
margin_top = 32.0
margin_right = 588.0
margin_bottom = 112.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Quanto de vida?"

[node name="LineEdit" type="LineEdit" parent="ConfirmationDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 148.0
margin_bottom = 44.0

[node name="ConfirmationDialog2" type="ConfirmationDialog" parent="."]
margin_left = 434.0
margin_top = 40.0
margin_right = 590.0
margin_bottom = 120.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Quanto de ki?"

[node name="LineEdit" type="LineEdit" parent="ConfirmationDialog2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 148.0
margin_bottom = 44.0

[node name="ConfirmationDialog3" type="ConfirmationDialog" parent="."]
margin_left = 868.0
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Quanto de ki?"

[node name="LineEdit" type="LineEdit" parent="ConfirmationDialog3"]
margin_left = 8.0
margin_top = 8.0
margin_right = 148.0
margin_bottom = 44.0

[node name="box_position" type="Position2D" parent="."]
position = Vector2( 445, 46 )

[node name="st_change_0" type="TextureButton" parent="."]
visible = false
margin_left = 7.0
margin_top = 101.0
margin_right = 421.0
margin_bottom = 128.0

[node name="st_change_1" type="TextureButton" parent="."]
visible = false
margin_left = 603.0
margin_top = 101.0
margin_right = 1017.0
margin_bottom = 128.0

[node name="ki_change_0" type="TextureButton" parent="."]
visible = false
margin_left = 9.0
margin_top = 63.0
margin_right = 421.0
margin_bottom = 91.0

[node name="ki_change_1" type="TextureButton" parent="."]
visible = false
margin_left = 603.0
margin_top = 65.0
margin_right = 1017.0
margin_bottom = 92.0

[node name="menu_panel" parent="." instance=ExtResource( 19 )]
margin_top = -88.0
margin_bottom = 16.0

[node name="Button" type="Button" parent="menu_panel"]
margin_left = 24.0
margin_top = 40.0
margin_right = 153.0
margin_bottom = 60.0
text = "VOLTAR AO MENU"

[connection signal="pressed" from="confirm_1" to="." method="_on_confirm_1_pressed"]
[connection signal="pressed" from="confirm_2" to="." method="_on_confirm_2_pressed"]
[connection signal="item_selected" from="panel_1/transformation_box_0" to="." method="_on_transformation_box_0_item_selected"]
[connection signal="pressed" from="panel_1/atacar_0" to="." method="_on_atacar_0_pressed"]
[connection signal="item_selected" from="panel_2/transformation_box_1" to="." method="_on_transformation_box_1_item_selected"]
[connection signal="pressed" from="panel_2/atacar_1" to="." method="_on_atacar_1_pressed"]
[connection signal="pressed" from="reset_0" to="." method="_on_reset_1_pressed"]
[connection signal="pressed" from="reset_1" to="." method="_on_reset_2_pressed"]
[connection signal="pressed" from="scan_folder" to="." method="_on_scan_folder_pressed"]
[connection signal="pressed" from="life_change_0" to="." method="_on_life_change_1_pressed"]
[connection signal="pressed" from="life_change_1" to="." method="_on_life_change_2_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_1_confirmed"]
[connection signal="confirmed" from="ConfirmationDialog2" to="." method="_on_ConfirmationDialog2_confirmed"]
[connection signal="confirmed" from="ConfirmationDialog3" to="." method="_on_ConfirmationDialog3_confirmed"]
[connection signal="pressed" from="st_change_0" to="." method="_on_st_change_0_pressed"]
[connection signal="pressed" from="st_change_1" to="." method="_on_st_change_1_pressed"]
[connection signal="pressed" from="ki_change_0" to="." method="_on_ki_change_0_pressed"]
[connection signal="pressed" from="ki_change_1" to="." method="_on_ki_change_1_pressed"]
[connection signal="pressed" from="menu_panel/Button" to="." method="_on_Button_pressed"]
